--- a/static/home.css
+++ b/static/home.css
@@ -20,8 +20,9 @@
 
       .name-section {
         font-family: 'Roboto';
-        font-size: 175px;
+        font-size: 105px;
         font-weight: 900;
+
       }
 
       .mid-column {
@@ -38,6 +39,14 @@
       .project-showcase{
         padding-bottom:20px;
       }
+
+      .project-row{
+        padding-bottom:20px;
+        height: 410px;
+        text-align: center;
+      }
+
+
 
       .image-showcase{
         max-width:100%;
@@ -101,6 +110,224 @@
 		.spacer{
 		    height: 50px;
 		}
+
+        .g-r-1 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../3D/media/VRT-showcase.png");
+            background-repeat: no-repeat;
+            background-size: 420px;
+            background-position: center center;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+        .g-r-2 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../3D/media/dml-2.gif");
+            background-repeat: no-repeat;
+            background-size: 610px;
+            background-position: center center;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+		.g-r-3 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../3D/media/graphics-1.png");
+            background-repeat: no-repeat;
+            background-size: 420px;
+            background-position: center center;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+        .p-r-1 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../product/media/barhub-5.gif");
+            background-repeat: no-repeat;
+            background-size: 750px;
+            background-position: center center;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+        .p-r-2 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../product/media/datc-7.png");
+            background-repeat: no-repeat;
+            background-size: 750px;
+            background-position: center center;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+        .u-r-1 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../ui-ux/media/ambient-1.png");
+            background-repeat: no-repeat;
+            background-size: 750px;
+            background-position: center center;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+        .u-r-2 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../ui-ux/media/cvc-5.png");
+            background-repeat: no-repeat;
+            background-size: 420px;
+            background-position: center 0;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+        .u-r-3 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../ui-ux/media/birdle-1.png");
+            background-repeat: no-repeat;
+            background-size: 420px;
+            background-position: center 20%;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+        .u-r-4 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../ui-ux/media/amot-1.png");
+            background-repeat: no-repeat;
+            background-size: 1000px;
+            background-position: center center;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+        .u-r-5 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../ui-ux/media/ps-1.png");
+            background-repeat: no-repeat;
+            background-size: 600px;
+            background-position: center 0;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+        .a-r-1 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../arch/media/newburgh-2.JPG");
+            background-repeat: no-repeat;
+            background-size: 375px;
+            background-position: center center;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+        .a-r-2 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../arch/media/flood-1.jpg");
+            background-repeat: no-repeat;
+            background-size: 430px;
+            background-position: center center;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
+
 
 		a {
 		    color:black;
