--- a/static/home.css
+++ b/static/home.css
@@ -165,6 +165,24 @@
             border-radius: 30px 0px;
         }
 
+		.g-r-4 {
+            width: 410px;
+            height: 410px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+
+
+            background: url("../3D/media/solAR-1.png");
+            background-repeat: no-repeat;
+            background-size: 790px;
+            background-position: center center;
+
+            border: 8px solid #000000;
+            box-sizing: border-box;
+            border-radius: 30px 0px;
+        }
+
         .p-r-1 {
             width: 410px;
             height: 410px;
