.jpg changed to .JPG

--- a/static/home.css
+++ b/static/home.css
@@ -335,7 +335,7 @@
             display: block;
 
 
-            background: url("../arch/media/flood-1.jpg");
+            background: url("../arch/media/flood-1.JPG");
             background-repeat: no-repeat;
             background-size: 430px;
             background-position: center center;
