Began adding NN and Dia projects.

--- a/static/home.css
+++ b/static/home.css
@@ -249,9 +249,9 @@
             display: block;
 
 
-            background: url("../ui-ux/media/birdle-1.png");
+            background: url("../3D/media/NN-1.jpg");
             background-repeat: no-repeat;
-            background-size: 300px;
+            background-size: 420px;
             background-position: center center;
 
 
@@ -265,7 +265,7 @@
             display: block;
 
 
-            background: url("../ui-ux/media/amot-1.png");
+            background: url("../3D/media/quilt-2.jpg");
             background-repeat: no-repeat;
             background-size: 420px;
             background-position: center center;
