--- a/static/home.css
+++ b/static/home.css
@@ -60,15 +60,7 @@
         padding-bottom:20px;
        }
 
-	    body {
-			width: 100%;
-			margin: 0;
-			padding: 0;
-			overflow-x: hidden;
-			bgcolor: black;
-		}
-
-		.panel-old{
+	.panel-old{
 			width: 2000px;
 			float: left;
 			padding-left: 30px;
@@ -111,218 +103,91 @@
 		.spacer{
 		    height: 50px;
 		}
-
-        .g-r-1 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-
-            background: url("../3D/media/VRT-showcase.png");
-            background-repeat: no-repeat;
-            background-size: 420px;
-            background-position: center center;
-
-
-
-        }
-
-        .g-r-2 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../3D/media/dml-2.gif");
-            background-repeat: no-repeat;
-            background-size: 410px;
-            background-position: center center;
-
-        }
-
-		.g-r-3 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../3D/media/graphics-1.png");
-            background-repeat: no-repeat;
-            background-size: 420px;
-            background-position: center center;
-
-
-        }
-
-		.g-r-4 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../3D/media/solAR-1.png");
-            background-repeat: no-repeat;
-            background-size: 790px;
-            background-position: center center;
-
-
-        }
-
-        .p-r-1 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../product/media/barhub-5.gif");
-            background-repeat: no-repeat;
-            background-size: 750px;
-            background-position: center center;
-
-
-        }
-
-        .p-r-2 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../product/media/datc-7.png");
-            background-repeat: no-repeat;
-            background-size: 750px;
-            background-position: center center;
-
-
-        }
-
-        .u-r-1 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../ui-ux/media/ambient-1.png");
-            background-repeat: no-repeat;
-            background-size: 420px;
-            background-position: center center;
-
-
-        }
-
-        .u-r-2 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../ui-ux/media/cvc-5.png");
-            background-repeat: no-repeat;
-            background-size: 300px;
-            background-position: center center;
-
-
-        }
-
-        .u-r-3 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../3D/media/NN-1.jpg");
-            background-repeat: no-repeat;
-            background-size: 420px;
-            background-position: center center;
-
-
-        }
-
-        .u-r-4 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../3D/media/quilt-2.jpg");
-            background-repeat: no-repeat;
-            background-size: 420px;
-            background-position: center center;
-
-
-        }
-
-        .u-r-5 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../ui-ux/media/ps-1.png");
-            background-repeat: no-repeat;
-            background-size: 400px;
-            background-position: center center;
-
-        }
+ 
 
         .size-gif{
             height:420px;
             width:420px;
         }
 
-        .a-r-1 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-
-
-            background: url("../arch/media/newburgh-2.JPG");
-            background-repeat: no-repeat;
-            background-size: 375px;
-            background-position: center center;
-
-
+                      body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            scroll-snap-type: y mandatory;
+            overflow-y: scroll;
         }
 
-        .a-r-2 {
-            width: 100%;
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto;
+        header {
+            background-color: #007BFF;
+            color: white;
+            padding: 1rem 0;
+            text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 10;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2rem;
+        }
+
+        .gallery {
+            display: flex;
+            flex-direction: column;
+            gap: 0;
+            padding: 0;
+            margin: 0;
+        }
+
+        .gallery-item {
+            position: relative;
+            background-size: cover;
+            background-position: center;
+            overflow: hidden;
+            height: 100vh;
+            transition: transform 0.3s, background-color 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            scroll-snap-align: start;
+        }
+
+        .gallery-item:hover {
+            transform: scale(1.05);
+            background-color: #007BFF;
+        }
+
+        .gallery-item:hover .info {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+        }
+
+        .gallery-item .info {
+            position: absolute;
+            inset: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: transparent;
+            background-color: rgba(0, 0, 0, 0);
+            transition: color 0.3s, background-color 0.3s;
+        }
+
+        .gallery-item img {
+            display: none;
+        }
+
+        .gallery-item a {
+            position: absolute;
+            inset: 0;
             display: block;
-
-
-            background: url("../arch/media/flood-1.JPG");
-            background-repeat: no-repeat;
-            background-size: 430px;
-            background-position: center center;
-
-
+            text-decoration: none;
         }
 
         #c {
