--- a/static/home.css
+++ b/static/home.css
@@ -49,8 +49,8 @@
 
 
       .image-showcase{
-        max-width:100%;
-        max-height:100%;
+        width:100%;
+        height:100%;
         margin: auto;
         display: block;
 
@@ -75,8 +75,6 @@
 			background: white;
 		}
 
-		.home-panel {
-		}
 
 		#banner {
 		  position: fixed;
@@ -94,11 +92,7 @@
 		   color: black;
 		}
 
-		.navbar{
-		  z-index: 9999;
-		  background: #eee;
-		  width: 100%;
-		}
+
 
 		.spacer{
 		    height: 50px;
@@ -110,14 +104,19 @@
             width:420px;
         }
 
-                      body {
+        body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
-            scroll-snap-type: y mandatory;
-            overflow-y: scroll;
+
+        }
+
+        main{
+          scroll-snap-type: y mandatory;
+          height: 100vh;
+          overflow: hidden
         }
 
         header {
@@ -153,8 +152,31 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            scroll-snap-align: start;
         }
+
+      section {
+        height: 100vh;
+        scroll-snap-align: start;
+        position: relative;
+      }
+
+
+      .home-parent{
+        overflow: scroll;
+        height: 100vh;
+        scroll-snap-points-y: repeat(100vh);
+        scroll-snap-type: y mandatory;
+      }
+
+
+
+      .contact-me {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh; /* Ensure the div takes up the full viewport height */
+        text-align: center; /* Center the text inside the div */
+    }
 
         .gallery-item:hover {
             transform: scale(1.05);
