--- a/static/home.css
+++ b/static/home.css
@@ -188,18 +188,38 @@
             color: white;
         }
 
+        .gallery-item:hover .info-sub {
+          color: white;
+      }
+
         .gallery-item .info {
             position: absolute;
             inset: 0;
             display: flex;
             align-items: center;
-            justify-content: center;
-            font-size: 1.5rem;
+            justify-content: left;
+            padding-left: 25vw;
+            font-size: 3rem;
             font-weight: bold;
             color: transparent;
             background-color: rgba(0, 0, 0, 0);
             transition: color 0.3s, background-color 0.3s;
         }
+
+        .gallery-item .info-sub {
+          position: absolute;
+          inset: 0;
+          display: flex;
+          align-items: center;
+          justify-content: left;
+          padding-left: 25vw;
+          padding-top: 10vh;
+          font-size: 1.5rem;
+          font-weight: bold;
+          color: transparent;
+          background-color: rgba(0, 0, 0, 0);
+          transition: color 0.3s, background-color 0.3s;
+      }
 
         .gallery-item img {
             display: none;
